# cfn-security-auditor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  prompts.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: AUDIT_TRAIL.md  DECK.md  openapi.json
scripts/: export_openapi.py
src/cfn_auditor/: __init__.py  scoring.py
src/cfn_auditor/advisor/: __init__.py  anthropic.py  dto.py  provider.py  rag.py  static.py
src/cfn_auditor/advisor/corpus/: README.md  cloudtrail.md  ec2.md  iam.md  rds.md  s3.md  sg.md
src/cfn_auditor/api/: __init__.py  app.py  dependencies.py  observability.py  rate_limit.py  schemas.py
src/cfn_auditor/api/routes/: __init__.py  health.py  rules.py  scans.py
src/cfn_auditor/config/: __init__.py  settings.py
src/cfn_auditor/dashboard/: __init__.py  app.py  client.py
src/cfn_auditor/db/: __init__.py  session.py
src/cfn_auditor/engine/: __init__.py  scanner.py
src/cfn_auditor/models/: __init__.py  finding.py  scan.py
src/cfn_auditor/parser/: __init__.py  errors.py  loader.py  model.py  parse.py
src/cfn_auditor/rules/: __init__.py  base.py  finding.py  intrinsics.py  registry.py  remediation.py  severity.py
src/cfn_auditor/rules/checks/: __init__.py  cloudtrail.py  ec2.py  iam.py  rds.py  s3.py  sg.py
tests/: conftest.py  test_config.py  test_package.py  test_scoring.py
tests/advisor/: __init__.py  test_anthropic_provider.py  test_factory_selection.py  test_rag.py  test_static_provider.py
tests/api/: conftest.py  test_advice.py  test_health.py  test_observability.py  test_openapi.py  test_rate_limit.py  test_rules.py  test_scans.py
tests/dashboard/: __init__.py  test_advice.py  test_client.py  test_transforms.py
tests/db/: __init__.py  test_models_roundtrip.py  test_session.py
tests/engine/: conftest.py  test_resilience.py  test_run_scan.py
tests/fixtures/: clean.yaml  critical.yaml  medium.yaml
tests/parser/: __init__.py  test_parser.py
tests/rules/: __init__.py  _helpers.py  test_ct_001_kms.py  test_ec2_001_ebs_encryption.py  test_framework.py  test_iam_001_action_wildcard.py  test_iam_002_resource_wildcard.py  test_rds_001_storage_encrypted.py  test_rds_002_publicly_accessible.py  test_registry_presence.py  test_s3_001_missing_bucket_encryption.py  test_s3_002_public_access_block.py  test_s3_003_public_acl.py  test_sg_001_wide_open.py
