[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfn-security-auditor"
version = "0.1.0"
description = "API-first static security guardrail auditor for CloudFormation templates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "Raj Kumar" }]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlmodel>=0.0.22,<0.1",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    "streamlit>=1.40,<2",
    "httpx>=0.28,<0.29",
    "anthropic>=0.39,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "ruff>=0.14,<0.15",
    "black>=25.1,<26",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
    "types-PyYAML>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cfn_auditor"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yaml.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/cfn_auditor"]
branch = true
omit = [
    # Streamlit entry point — runs only inside the Streamlit runtime; tested
    # indirectly via the pure transforms + HTTP client modules.
    "src/cfn_auditor/dashboard/app.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
